# DataRec

./: .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE.txt  README.md  index.html  main.py  objects.inv  pyproject.toml  quickstart.py  requirements.txt  requirements_torch.txt  setup.py
datarec/: .gitignore  __init__.py
datarec/data/: __init__.py  characteristics.py  datarec_builder.py  dataset.py  download.py  graph.py  resource.py  source.py  topological_characteristics.py  torch_dataset.py  utils.py
datarec/datasets/: __init__.py  amazon_book.py  base.py  download.py  examples.py  gowalla.py
datarec/io/: __init__.py  cache.py  paths.py  rawdata.py  readers.py  utils.py  writers.py
datarec/pipeline/: __init__.py  pipeline.py  pipeline_step.py
datarec/processing/: __init__.py  binarizer.py  binirizer.py  cold.py  kcore.py  processor.py  rating.py  temporal.py
datarec/registry/: utils.py
datarec/splitters/: __init__.py  splitter.py  utils.py
datasets_nav/: index.html
docs/: mkdocs.yml
docs/autobuild/: README_template.md  datasets_nav.py  readme_builder.py  registry_markdown.py
docs/source/: conf.py  datarec.data.rst  datarec.datasets.alibaba_ifashion.rst  datarec.datasets.amazon_beauty.rst  datarec.datasets.amazon_books.rst  datarec.datasets.amazon_clothing.rst  datarec.datasets.amazon_sports_and_outdoors.rst  datarec.datasets.amazon_toys_and_games.rst  datarec.datasets.amazon_videogames.rst  datarec.datasets.ciao.rst  datarec.datasets.epinions.rst  datarec.datasets.gowalla.rst  datarec.datasets.lastfm.rst  datarec.datasets.mind.rst  datarec.datasets.movielens1m.rst  datarec.datasets.movielens20m.rst  datarec.datasets.rst  datarec.datasets.tmall.rst  datarec.datasets.yelp.rst  datarec.io.frameworks.clayrs.rst  datarec.io.frameworks.cornac.rst  datarec.io.frameworks.daisyrec.rst  datarec.io.frameworks.elliot.rst  datarec.io.frameworks.lenskit.rst  datarec.io.frameworks.recbole.rst  datarec.io.frameworks.rechorus.rst  datarec.io.frameworks.recommenders.rst  datarec.io.frameworks.recpack.rst  datarec.io.frameworks.rst  datarec.io.rst  datarec.processing.rst  datarec.rst  datarec.splitters.rst  datarec.splitters.uniform.rst  datarec.splitters.uniform.temporal.rst  datarec.splitters.user_stratified.rst  datarec.splitters.user_stratified.temporal.rst  index.rst  modules.rst
docs/src/: datasets_nav.md  get_started.md  index.md  tutorial.md
documentation/data/: index.html
documentation/datasets/: index.html
documentation/io/: index.html
documentation/pipeline/: index.html
documentation/processing/: index.html
documentation/registry/: index.html
documentation/splitters/: index.html
examples/datarec/: get_item_interactions.py  get_user_interactions.py
examples/datasets/: MIND_small.py  aliababa_ifashion.py  amazon_beauty.py  amazon_music.py  ambar.py  ciao.py  citeulike.py  epinions.py  gowalla.py  movielens100k.py  movielens1m.py  movielens20m.py  precomputed_characteristics.py  tmall.py
examples/frameworks_compatibility/: test_clay.py  test_cornac.py  test_daisy.py  test_elliot.py  test_filter.py  test_io.py  test_lenskit.py  test_recbole.py  test_rechorus.py  test_recommenders.py  test_recpack.py
examples/graph/: graph.py  graph_properties.py  to_datarec.py
examples/in_out/: cache_directory.py  readers.py  to_from_cache.py  to_from_pickle.py
examples/pipeline/: auto_pipeline.py  auto_pipeline_2.py  create_pipeline_example_1.py  create_pipeline_example_2.py  create_pipeline_example_3.py  read_pipeline.py  read_pipeline.yml
examples/processing/: binarize.py  cold.py  filter_out_duplicated_interactions.py  item_kcore.py  rating_threshold.py  temporal.py  user_item_nrounds_kcore.py  user_kcore.py  user_mean_rating.py
examples/splitting/: random_holdout.py  temporal_holdout.py  temporal_threshold.py  user_holdout.py  user_leaveNout.py  user_leaveoneout.py  user_leaveratioout.py  user_temporal_leaveNout.py  user_temporal_leaveoneout.py  user_temporal_leaveratioout.py
examples/torch_dataset/: torch_dataloader.py
get_started/: index.html
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-torch.txt  requirements.txt
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/datasets_nav/: index.html
site/get_started/: index.html
site/tutorial/: index.html
stylesheets/: datarec_colors.css
tests/: utils.py
tests/characteristics/: test_classic.py  test_topological.py
tests/data/: test_to_torch_dataset.py  test_torch_dataset.py  test_torch_optional_missing.py
tests/datasets/: helpers.py  test_alibaba_ifashion.py  test_amazon_baby.py  test_amazon_beauty.py  test_amazon_books.py  test_amazon_clothing.py  test_amazon_music.py  test_amazon_office.py  test_amazon_sports.py  test_amazon_toys.py  test_amazon_videogames.py  test_ambar.py  test_ciao.py  test_citeulike.py  test_epinions.py  test_gowalla.py  test_lastfm.py  test_mind.py  test_movielens.py  test_tmall.py  test_yelp.py
tests/docs/: datasets_nav.py
tests/io/: paths.py  test_cache.py  test_cache_extended.py  test_paths.py  test_rawdata.py  test_readers_sequences_json.py  test_readers_sequences_tabular.py  test_readers_transactions.py  test_transactions_blocks.py
tests/pipeline/: test_pipeline.py
tests/preprocessing/: test_binarizer.py  test_cold.py  test_kcore.py  test_rating.py  test_temporal.py  test_temporal_threshold.py
tests/splitters/: test_lave_ratio_last.py  test_leave_n_last.py  test_leave_n_out.py  test_leave_one_last_item.py  test_leave_one_out.py  test_leave_ratio_out.py  test_max_by_col_utils.py  test_random_holdout.py  test_random_sample_utils.py  test_reproducibility.py  test_splitter.py  test_temporal_holdout.py  test_temporal_holdout_utils.py  test_user_stratified_hold_out.py
tutorial/: index.html
usage/analysis/: user_item_frequency.py  user_item_popularity.py
usage/datasets/: amazon_baby.py  amazon_beauty.py  amazon_books.py  amazon_clothing.py  amazon_office.py  amazon_sports.py  amazon_toys.py  amazon_videogames.py  ambar.py  custom.py  datarec_to_raw.py  epinions.py  gowalla.py  ifashion_alibaba.py  (+6 more)
(+322 files in other folders)
