[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datarec-lib"
version = "1.4.0"
description = "Standardized & reproducible data management for recommender systems."
readme = "README.md"
requires-python = ">=3.9,<3.15"
authors = [
    { name = "Alberto Carlo Maria Mancino", email = "alberto.mancino@poliba.it" },
    { name = "Salvatore Bufi", email = "salvatore.bufi@poliba.it" },
    { name = "Angela Di Fazio", email = "angela.difazio@poliba.it" },
    { name = "Daniele Malitesta", email = "daniele.malitesta@centralesupelec.fr" },
    { name = "Antonio Ferrara", email = "antonio.ferrara@poliba.it" },
    { name = "Claudio Pomo", email = "claudio.pomo@poliba.it" },
    { name = "Tommaso Di Noia", email = "tommaso.dinoia@poliba.it" }
]
license = { text = "MIT" }
keywords = ["recommender-systems", "data", "ml", "etl"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.23,<3",
    "pandas>=2.3,<3",
    "scikit-learn>=1.6,<2",
    "tqdm>=4.64,<5",
    "gdown>=4.7,<5",
    "requests>=2.28,<3",
    "py7zr>=0.22,<1",
    "PyYAML>=6.0,<7",
    "platformdirs>=4.4.0,<5",
    "appdirs>=1.4.4,<2",
    "typing_extensions",
    "networkx>=3.2,<4",
    "python-igraph>=1.0,<2",
    "PySocks>=1.7,<2",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0"
]
dev = [
    "pytest>=8.4,<9",
    "build>=1.3,<2",
    "twine>=6.2,<7",
    "pip-chill>=1.0,<2",
]
docs = [
    "babel",
    "backrefs",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "ghp-import",
    "griffe",
    "idna",
    "Jinja2",
    "Markdown",
    "MarkupSafe",
    "mergedeep",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-section-index",
    "mkdocstrings",
    "mkdocstrings-python",
    "packaging",
    "paginate",
    "pathspec",
    "platformdirs",
    "Pygments",
    "pymdown-extensions",
    "python-dateutil",
    "PyYAML",
    "pyyaml_env_tag",
    "requests",
    "six",
    "urllib3",
    "watchdog"
]

[project.urls]
Homepage = "https://sisinflab.github.io/DataRec/"
Repository = "https://github.com/sisinflab/DataRec"
Issues = "https://github.com/sisinflab/DataRec/issues"

[tool.setuptools]
license-files = ["LICENSE*", "COPYING*", "NOTICE*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datarec*"]
exclude = ["tests*", "docs*", "dist*"]

[tool.setuptools.package-data]
datarec = ["**/*.yml", "**/*.yaml", "**/*.json", "**/*.csv", "**/*.txt", "**/*.md", "py.typed"]